--- a/static/style/app.css
+++ b/static/style/app.css
@@ -4,8 +4,10 @@ html, body {
     padding: 0;
     font-family: 'Open Sans', sans-serif;
 
-    color: white;
-    background-color: rgb(55, 55, 55);
+    color: var(--text-color);
+    background-color: var(--background-color);
     overflow-x: hidden;
     overflow-y: hidden;
+
+    transition: background-color 0.1s;
 }
