--- a/static/style/file-list.css
+++ b/static/style/file-list.css
@@ -1,15 +1,15 @@
 button {
-    border: 1px solid rgb(255, 255, 255);
+    border: 1px solid var(--border-color);
     padding: 0.5em 1em;
     border-radius: 0.25em;
     /* background-color: white; */
-    color: white;
-    background-color: rgba(255, 255, 255, 0.1);
+    color: var(--text-color);
+    background-color: var(--button-background-color);
 
     transition: background-color 0.1s;
 
     &:hover {
-        background-color: rgba(255, 255, 255, 0.2);
+        background-color: var(--button-hover-color);
         cursor: pointer;
     }
 }
@@ -17,8 +17,8 @@ button {
 input {
     background-color: transparent;
     outline: 0;
-    border: 1px solid white;
-    color: white;
+    border: 1px solid var(--border-color);
+    color: var(--text-color);
     padding: 0.5em 1em;
 }
 
@@ -35,8 +35,8 @@ main {
     flex-direction: column;
     gap: 1em;
     text-align: center;
-    border-right: 1px solid white;
-    background-color: rgba(255, 255, 255, 0.05);
+    border-right: 1px solid var(--border-color);
+    background-color: var(--sidebar-color);
 
     max-width: 20vw;
 
@@ -67,7 +67,7 @@ main {
     transition: background-color 0.1s;
 
     &:hover {
-        background-color: rgba(200, 200, 200, 0.2);
+        background-color: var(--button-hover-color);
     }
 }
 
@@ -102,7 +102,7 @@ main {
 }
 
 .dir-entry {
-    border: 1px solid white;
+    border: 1px solid var(--border-color);
     display: grid;
     place-items: center;
     padding: 0.25em;
@@ -113,15 +113,15 @@ main {
     transition: background-color 0.1s;
 
     &:hover {
-        background-color: rgba(200, 200, 200, 0.2);
+        background-color: var(--button-hover-color);
     }
 }
 
 .terminal {
     width: 60vw;
     height: 40vh;
-    background-color: rgba(255, 255, 255, 0.1);
-    border: 1px solid white;
+    background-color: var(--button-background-color);
+    border: 1px solid var(--border-color);
 
     overflow-y: scroll;
     padding: 1em;
